Fix banner icon alignment

--- a/popup.css
+++ b/popup.css
@@ -195,8 +195,8 @@ a, input, textarea {
   display: inline-block;
   margin-right: 8px;
   margin-left: 4px;
-  width: 32px;
-  height: 32px;
+  width: 30px;
+  height: 30px;
   vertical-align: middle;
   text-align: center;
 }
